	portage syntax.
	* modules/blas.eclectic, modules/lapack.eclectic: Update to new has
	syntax.

2005-05-07 Aaron Walker <ka0ttic@gentoo.org>

	* modules/profile-symlink.eclectic: Fix sed to use current
	profiles.desc format. Also, ensure that explicitly specified profiles
	are actually valid for the host arch.
	* man/Makefile.am: Add missing manual pages.

2005-05-07 Danny van Dyk <kugelfang@gentoo.org>

	* libs/output.bash.in: Added function 'space'.
	* libs/default.eclectic.in: Fixed do_usage to filter 'action'.
	* man/blas.eclectic: Added missing Section 'ACTION: SET'.
	* man/lapack.eclectic: Added a manpage for the lapack module.
	* man/profile.eclectic: Added a manpage for profile.
	* modules/blas.eclectic: Finalized this module.
	* modules/lapack.eclectic: Added lapack module.

2005-04-25 Tom Martin <slarti@gentoo.org>

	* modules/mailer.eclectic: Added mailwrapper module.

2005-04-11 Aaron Walker <ka0ttic@gentoo.org>

	* man/Makefile.am: forgot to add $(man_MANS) to EXTRA_DIST.
	* modules/profile.eclectic: Added make.profile module.
	* modules/bashcomp.eclectic: Fixed do_list to ignore *~.
	* misc/Makefile.am: Added Makefile.am.
	* misc/eclectic.bashcomp: Added eclectic command-line completion.

2005-04-10 Aaron Walker <ka0ttic@gentoo.org>

	* man/Makefile.am: Added Makefile.am.

2005-04-07 Danny van Dyk <kugelfang@gentoo.org>

	* modules/blas.eclectic: Added package information to outputs.
	* man/blas.eclectic.1: Added a manpage for the blas module.

2005-04-04 Danny van Dyk <kugelfang@gentoo.org>

	* man/eclectic.1: Added a rudimental manpage.

2005-03-24 Danny van Dyk <kugelfang@gentoo.org>

	* libs/config.bash.in: Fixed store_config(), added add_config().
	* libs/core.bash.in: Added function has().
	* libs/multilib.bash.in: Added multilib library.
	* modules/blas.eclectic: Added blas module.

2005-02-22 Aaron Walker <ka0ttic@gentoo.org>

	* modules/bashcomp.eclectic: Added bashcomp module.

2005-02-22 Ciaran McCreesh <ciaranm@gentoo.org>
