@@ -24,6 +24,8 @@ ChangeLog for eclectic
 	profiles.desc format. Also, ensure that explicitly specified profiles
 	are actually valid for the host arch.
 	* man/Makefile.am: Add missing manual pages.
+	* configure.in, Makefile.am, doc/Makefile.am: Added Makefile.am for
+	doc/ with html target.
 
 2005-05-07 Danny van Dyk <kugelfang@gentoo.org>
 
